--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.4",
     "multer": "^1.3.0",
-    "mysql": "^2.14.1"
+    "mysql": "^2.14.1",
+    "mysql2": "^1.4.2",
+    "sequelize": "^4.11.0"
   }
 }
